# devit

./: .gitignore  001-ci_makefile.patch  001-timeout.patch  002-workflow.patch  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEMO_DEVIT.txt  FEATURES_TRACK.md  Makefile  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  approval_rules_unix.patch  cmd_err.txt  devit.toml  directives.txt  patch_diff_vide.patch  patch_workflow.patch  scaffold.patch  todo_bench.txt  wasm.patch
.devit/recipes/: add-ci.yaml  migrate-jest-vitest.yaml  rust-upgrade-1.81.yaml
.devit/scripts/: ensure_sarif.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/issue-bodies/: corrective-run-cycle.md  sandbox-allowlist-config.md  sandbox-bwrap-mounts.md  sandbox-timeout-config.md  tui-event-stream.md  tui-logs-color.md  tui-scroll-horizontal.md
.github/workflows/: branch_name.yml  ci.yml  release.yml  sprint5_issues.yml
bench/: Dockerfile.swebench  NOTES.md  README.md  devit.bench.toml  eval.sh  eval_docker.sh  generate_predictions.py  patch-devit-bin.diff  patch_diff_vide.patch  predictions.jsonl  requirements.txt  summarize.sh
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/backends/openai_like/: Cargo.toml
crates/backends/openai_like/src/: lib.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: attest.rs  commit_msg.rs  context.rs  main.rs  mcp.rs  merge_assist.rs  plugins.rs  precommit.rs  recipes.rs  report.rs  sbom.rs  test_runner.rs
crates/cli/tests/: approval.rs  mcp_schema.rs  mcp_watchdog.rs  recipes.rs  tools_json.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: codeexec.rs  fs.rs  git.rs  lib.rs  mod.rs  shell.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/tui/tests/: cli.rs
docs/: approvals.md  recipes.md
editors/vscode/devit-vscode/: .vscodeignore  LICENSE  README.md  eslint.config.cjs  package-lock.json  package.json  tsconfig.json
editors/vscode/devit-vscode/src/: extension.ts
examples/: README.md  devit.sample.toml
examples/plugins/echo_sum/: Cargo.toml  README.md
examples/plugins/echo_sum/src/: main.rs
home/naskel/workspace/devIt/: SMOKE_DEVIT.txt
scenarios/: README.md
scripts/: devit_status_probe.sh  e2e_mcp.sh  e2e_plugin.sh  extract_release_notes.sh  flags_expected.txt  lint_errors.sh  mini_patch_pipeline_verbose.sh  prepush-smoketest.sh  smoke_full.sh  smoke_mcp_redaction.sh  v04_quick_test.sh  v04_sanity_supplychain.sh  v05_sanity_rc1.sh
src/: doctor.rs
