# -----------------------------
# Top-level Cargo.toml (workspace)
# -----------------------------

[workspace]
members = [
    "crates/cli",
    "crates/agent",
    "crates/common",
    "crates/tui",
    "crates/sandbox",
    "crates/backends/openai_like",
    "crates/tools",
]
resolver = "2"


[workspace.package]
edition = "2021"


[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "zstd", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs"] }
ratatui = "0.28"
crossterm = "0.28"
async-trait = "0.1"
which = "6"
bytes = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
