# -----------------------------
# crates/cli/Cargo.toml
# -----------------------------
[package]
name = "devit"
version = "0.2.0-rc.1"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

# local crates
devit-common = { path = "../common" }
devit-agent = { path = "../agent" }
devit-tools = { path = "../tools" }
sha2 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
devit-sandbox = { path = "../sandbox" }
