# -----------------------------
# crates/cli/Cargo.toml
# -----------------------------
[package]
name = "devit-cli"
version = "0.2.0-rc.1"
edition = "2021"

[features]
# Aucun impact par défaut. Active les bins/commandes MCP.
default = []
experimental = []

## Conserver le nom du binaire `devit`
## (sinon Cargo le renommerait en `devit-cli`)
[[bin]]
name = "devit"
path = "src/main.rs"

# Binaire expérimental MCP (n'est compilé que si feature activée)
[[bin]]
name = "devit-mcp"
path = "src/bin/devit-mcp.rs"
required-features = ["experimental"]

# Binaire MCP server (stdio) — expérimental
[[bin]]
name = "devit-mcpd"
path = "src/bin/devit-mcpd.rs"
required-features = ["experimental"]
# Binaire expérimental Plugins WASM/WASI
[[bin]]
name = "devit-plugin"
path = "src/bin/devit-plugin.rs"
required-features = ["experimental"]
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

# local crates
devit-common = { path = "../common" }
devit-agent = { path = "../agent" }
devit-tools = { path = "../tools" }
sha2 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
devit-sandbox = { path = "../sandbox" }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std","clock"] }

[dev-dependencies]
tempfile = "3"
