# -----------------------------
# crates/cli/Cargo.toml
# -----------------------------
[package]
name = "devit-cli"
version = "0.3.0"
edition = "2021"
build = "build.rs"

[features]
# Aucun impact par défaut. Active les bins/commandes MCP.
default = []
experimental = []

## Conserver le nom du binaire `devit`
## (sinon Cargo le renommerait en `devit-cli`)
[[bin]]
name = "devit"
path = "src/main.rs"

# Binaire expérimental MCP (n'est compilé que si feature activée)
[[bin]]
name = "devit-mcp"
path = "src/bin/devit-mcp.rs"
required-features = ["experimental"]

# Binaire MCP server (stdio) — expérimental
[[bin]]
name = "devit-mcpd"
path = "src/bin/devit-mcpd.rs"
required-features = ["experimental"]
# Binaire expérimental Plugins WASM/WASI
[[bin]]
name = "devit-plugin"
path = "src/bin/devit-plugin.rs"
required-features = ["experimental"]
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
ignore = "0.4"
globset = "0.4"
rayon = "1.10"
memmap2 = "0.9"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
pathdiff = "0.2"

# local crates
devit-common = { path = "../common" }
devit-agent = { path = "../agent" }
devit-tools = { path = "../tools" }
sha2 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
devit-sandbox = { path = "../sandbox" }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std","clock"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
