# -----------------------------
# crates/tools/Cargo.toml
# -----------------------------
[package]
name = "devit-tools"
version = "0.3.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
tokio = { workspace = true }

[lib]
path = "src/lib.rs"
