# -----------------------------
# crates/tui/Cargo.toml
# -----------------------------
[package]
name = "devit-tui"
version = "0.3.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ctrlc = "3"
serde = { workspace = true }

[[bin]]
name = "devit-tui"
path = "src/bin/devit-tui.rs"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
