# -----------------------------
# crates/backends/openai_like/Cargo.toml
# -----------------------------
[package]
name = "devit-backend-openai"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }


devit-common = { path = "../../common" }
